# bamboo_shoot_soup

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.backend.md  README.md  agent.md  product-spec.md  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: base.py  migrations.py  session.py
app/models/: __init__.py  consistency_check.py  content_matrix.py  diagnostic.py  growth_experiment.py  identity_model.py  identity_portfolio.py  launch_kit.py  llm_call_log.py  monetization.py  onboarding.py  persona.py  persona_constitution.py  simulator.py  user.py  v1_growth.py  viewpoint_asset.py
app/schemas/: __init__.py  consistency_check.py  content_matrix.py  event_log.py  experiment.py  identity_model.py  launch_kit.py  monetization_map.py  onboarding.py  persona.py  user.py
app/services/: consistency_check.py  content_matrix.py  event_log.py  experiment.py  identity_model.py  identity_portfolio.py  metrics.py  (+10 more)
backend/: README.md  alembic.ini
docs/: PRD.md  backend-api.md  hackathon-demo-script.md  mvp-frontend-mobile-smoke.md  mvp-implementation-plan.md  mvp-sqlalchemy-alembic-plan.md  product-spec.md
frontend/: .env.example  README.md  nuxt.config.ts  package.json  vitest.config.ts
migrations/: env.py
scripts/: acceptance.ps1  acceptance.sh
tests/: conftest.py  test_alembic_logging.py  test_api_flow.py  test_cors.py  test_db_startup.py  test_health.py  test_llm_client.py  test_llm_config.py  test_llm_error_routes.py  test_llm_generated_services.py  test_llm_replay_fallback.py  test_models_crud.py  test_route_parameter_mapping.py
(+123 files in other folders)
